Fix header spacing

--- a/static/styles/_chameleon.scss
+++ b/static/styles/_chameleon.scss
@@ -585,7 +585,7 @@ article {
   @media screen and (min-width: 768px) {
     .navbar-nav > li:not(.navbar-btn-alt) > a {
       margin: 16px 2px;
-      padding: 8px 14px;
+      padding: 8px 10px;
       border-radius: 4px;
       background-color: transparent;
     }
